STARCH-629 repeatable unit test configuration