@@ -46,8 +46,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 	<licenses>
 		<license>
 			<name>BSD-3-Clause</name>
-			<url>
-				https://github.iu.edu/iu-uits-es/iu-java-util/blob/develop/LICENSE</url>
+			<url>https://github.iu.edu/iu-uits-es/iu-java-util/blob/develop/LICENSE</url>
 			<distribution>repo</distribution>
 			<comments>Copyright (c) 2023 Indiana Univeristy</comments>
 		</license>
@@ -56,12 +55,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<argLine>-ea</argLine>
+		<argLine>-ea --add-modules ALL-MODULE-PATH</argLine>
 
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.interceptor-api.version>2.1.0</jakarta.interceptor-api.version>
 
 		<junit-jupiter.version>5.10.0</junit-jupiter.version>
+		<junit-platform.version>1.10.0</junit-platform.version>
 		<mockito.version>5.5.0</mockito.version>
 	</properties>
 
@@ -72,7 +72,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 		</repository>
 		<snapshotRepository>
 			<id>IUMaven</id>
-			<url>https://apps.iu.edu/nxs-prd/content/repositories/IUPublic-Snapshot</url>
+			<url>
+				https://apps.iu.edu/nxs-prd/content/repositories/IUPublic-Snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -82,21 +83,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 			<url>https://jakarta.oss.sonatype.org/content/repositories/releases</url>
 		</repository>
 	</repositories>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>${mockito.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 
 	<reporting>
 		<plugins>
@@ -115,6 +101,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 						<id>default-javadoc</id>
 						<reports>
 							<report>javadoc</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report</report>
 						</reports>
 					</reportSet>
 				</reportSets>
@@ -254,9 +251,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.1.2</version>
-					<configuration>
-						<useModulePath>false</useModulePath>
-					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-ear-plugin</artifactId>
@@ -265,10 +259,31 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.3.0</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<classpathPrefix>META-INF/lib</classpathPrefix>
+								<addExtensions>true</addExtensions>
+							</manifest>
+							<manifestEntries>
+								<Sealed>true</Sealed>
+							</manifestEntries>
+						</archive>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>3.3.2</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<addExtensions>true</addExtensions>
+							</manifest>
+							<manifestEntries>
+								<Sealed>true</Sealed>
+							</manifestEntries>
+						</archive>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-dependency-plugin</artifactId>
@@ -352,6 +367,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 								<goal>prepare-agent</goal>
 							</goals>
 							<phase>generate-test-resources</phase>
+						</execution>
+						<execution>
+							<id>coverage-report</id>
+							<goals>
+								<goal>report</goal>
+							</goals>
+							<phase>test</phase>
 						</execution>
 						<execution>
 							<id>coverage-check</id>
